--- a/public/index.html
+++ b/public/index.html
@@ -6,41 +6,154 @@
 <title>TrigguiApp – Un instante, un universo</title>
 <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
-html,body{width:100%;height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);overflow:hidden}
-body.dark{background:#000}
-.main{display:flex;flex-direction:column;justify-content:space-between;height:100dvh;opacity:0;animation:fadeIn 1.5s ease forwards}
-.header-message{text-align:center;padding:1vh 2vw;margin-top:1.5vh}
-.header-gradient{font-weight:800;font-size:clamp(1.4rem,2.5vw,2.2rem);background:linear-gradient(to right,#ff8a00,#e52e71,#9b00ff,#00c6ff);-webkit-background-clip:text;-webkit-text-fill-color:transparent;white-space:nowrap}
-.grid{flex:1;display:grid;gap:2vw;padding:0 2vw;grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr}
-@media(min-width:768px){
-  .grid{grid-template-columns:repeat(4,1fr);grid-template-rows:1fr}
+:root {
+  --header-height: 60px;
+  --footer-height: 120px;
 }
-@media(orientation:landscape) and (max-width:767px){
-  .grid{grid-template-columns:repeat(4,1fr);grid-template-rows:1fr}
+* { margin:0; padding:0; box-sizing:border-box; }
+html,body {
+  width:100%; height:100%;
+  font-family:'Archivo',sans-serif;
+  background:linear-gradient(135deg,#0d0e1a,#1a1c2d);
+  overflow:hidden;
 }
-
-.block{
-  position:relative;display:flex;justify-content:center;align-items:center;text-align:center;
-  border-radius:16px;font-weight:bold;font-size:clamp(1rem,1.9vw,1.3rem);color:#fff;
-  background-size:200% 200%;background-position:center;cursor:pointer;transition:.5s;
-  overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;padding:6px;
-  height:clamp(150px,24vh,260px)
+body.dark { background:#000; }
+.main {
+  display:flex; flex-direction:column; height:100dvh;
+  opacity:0; animation:fadeIn 1.5s ease forwards;
 }
-
-.block-content{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;padding:6px;text-align:center;max-height:100%}
-.label{z-index:1}
-.accionable{color:#fff;font-family:'Poppins',sans-serif;font-size:clamp(.9rem,1.4vw,1.2rem);font-weight:600;padding:10px;border-radius:14px;opacity:0;animation:aparecer .6s forwards;text-align:center;box-shadow:0 6px 20px rgba(0,0,0,.3)}
-.portada-wrapper{width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:radial-gradient(circle,#ffffff10,#0000);animation:glow 6s ease-in-out infinite}
-.portada-wrapper img{width:80%;max-height:90%;object-fit:contain;border-radius:20px;box-shadow:0 10px 24px rgba(0,0,0,.4);transition:transform .5s}
-.portada-wrapper img:hover{transform:scale(1.03) rotateY(4deg) rotateX(2deg)}
-.footer{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:1vh 2vw 2vh;min-height:120px}
-.shock{background:linear-gradient(135deg,#ff0080,#ff8c00,#00f2fe);color:#fff;font-weight:bold;border:none;border-radius:28px;padding:10px 20px;margin-top:6px;font-size:clamp(.9rem,1.8vw,1.2rem);cursor:pointer;box-shadow:0 0 12px rgba(255,105,180,.5);animation:pulse 2s infinite;max-width:95%}
-.counter{font-size:clamp(.9rem,1.2vw,1.1rem);color:#fff;margin-top:4px;font-family:'Poppins',sans-serif;text-align:center;white-space:nowrap;opacity:0;animation:fadeInInstant .3s forwards}
-.resaltado{font-size:1.1em;color:#ffcc00;font-weight:700}
-.trigguiletras{height:20px;opacity:.9;margin-top:1vh}
-.hidden{display:none!important}
-.frase-magica{font-size:1rem;color:#ffeb3b;text-align:center;margin-top:1rem;font-family:'Poppins',sans-serif;animation:fadeIn 1.4s ease}
+.header-message {
+  height:var(--header-height);
+  display:flex; align-items:center; justify-content:center;
+  padding:0 2vw;
+}
+.header-gradient {
+  font-weight:800;
+  font-size:clamp(1.3rem,2.5vw,2rem);
+  background:linear-gradient(to right,#ff8a00,#e52e71,#9b00ff,#00c6ff);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  white-space:nowrap;
+}
+.grid {
+  flex:1;
+  display:grid;
+  gap:2vw;
+  padding:0 2vw;
+  grid-template-columns:1fr 1fr;
+  grid-template-rows:1fr 1fr;
+}
+@media(min-width:768px) {
+  .grid {
+    grid-template-columns:repeat(4, 1fr);
+    grid-template-rows:1fr;
+  }
+}
+.block {
+  position:relative;
+  display:flex; justify-content:center; align-items:center; text-align:center;
+  border-radius:18px;
+  font-weight:bold;
+  font-size:clamp(1rem,1.9vw,1.3rem);
+  color:#fff;
+  background-size:200% 200%;
+  background-position:center;
+  cursor:pointer;
+  transition:.5s;
+  overflow:hidden;
+  transform:scale(.95);
+  opacity:0;
+  animation:scaleFadeIn 1.6s forwards;
+  padding:6px;
+}
+.block-content {
+  position:absolute;
+  inset:0;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  padding:6px;
+  text-align:center;
+}
+.label { z-index:1; }
+.accionable {
+  color:#fff;
+  font-family:'Poppins',sans-serif;
+  font-size:clamp(.9rem,1.4vw,1.2rem);
+  font-weight:600;
+  padding:10px;
+  border-radius:14px;
+  opacity:0;
+  animation:aparecer .6s forwards;
+  text-align:center;
+  box-shadow:0 6px 20px rgba(0,0,0,.3);
+}
+.portada-wrapper {
+  width:100%; height:100%;
+  display:flex; justify-content:center; align-items:center;
+  background:radial-gradient(circle,#ffffff10,#0000);
+  animation:glow 6s ease-in-out infinite;
+}
+.portada-wrapper img {
+  width:80%;
+  max-height:90%;
+  object-fit:contain;
+  border-radius:20px;
+  box-shadow:0 10px 24px rgba(0,0,0,.4);
+  transition:transform .5s;
+}
+.portada-wrapper img:hover {
+  transform:scale(1.03) rotateY(4deg) rotateX(2deg);
+}
+.footer {
+  height:var(--footer-height);
+  display:flex; flex-direction:column;
+  align-items:center; justify-content:flex-start;
+  padding:1vh 2vw;
+}
+.shock {
+  background:linear-gradient(135deg,#ff0080,#ff8c00,#00f2fe);
+  color:#fff;
+  font-weight:bold;
+  border:none;
+  border-radius:28px;
+  padding:10px 20px;
+  margin-top:6px;
+  font-size:clamp(.9rem,1.8vw,1.2rem);
+  cursor:pointer;
+  box-shadow:0 0 12px rgba(255,105,180,.5);
+  animation:pulse 2s infinite;
+  max-width:95%;
+}
+.counter {
+  font-size:clamp(.9rem,1.2vw,1.1rem);
+  color:#fff;
+  margin-top:4px;
+  font-family:'Poppins',sans-serif;
+  text-align:center;
+  white-space:nowrap;
+  opacity:0;
+  animation:fadeInInstant .3s forwards;
+}
+.resaltado {
+  font-size:1.1em;
+  color:#ffcc00;
+  font-weight:700;
+}
+.trigguiletras {
+  height:20px;
+  opacity:.9;
+  margin-top:1vh;
+}
+.hidden { display:none!important; }
+.frase-magica {
+  font-size:1rem;
+  color:#ffeb3b;
+  text-align:center;
+  margin-top:1rem;
+  font-family:'Poppins',sans-serif;
+  animation:fadeIn 1.4s ease;
+}
 @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
 @keyframes fadeInInstant{to{opacity:1}}
 @keyframes scaleFadeIn{to{transform:scale(1);opacity:1}}
@@ -75,7 +188,9 @@ fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/conteni
   });
 
 function generarGradiente(color) {
-  const h = parseInt(color.slice(1,3),16), l = parseInt(color.slice(3,5),16), s = parseInt(color.slice(5,7),16);
+  const h = parseInt(color.slice(1,3),16),
+        l = parseInt(color.slice(3,5),16),
+        s = parseInt(color.slice(5,7),16);
   const light = `rgba(${Math.min(h+30,255)},${Math.min(l+30,255)},${Math.min(s+30,255)},0.8)`;
   return `linear-gradient(135deg, ${color}, ${light})`;
 }
