--- a/public/index.html
+++ b/public/index.html
@@ -14,26 +14,30 @@
 html,body {
   width:100%; height:100%;
   font-family:'Archivo',sans-serif;
-  background:linear-gradient(135deg,#0d0e1a,#1a1c2d);
+  background:linear-gradient(135deg,#0f0c29,#302b63,#24243e);
   overflow:hidden;
+  transition:background 1.5s ease;
 }
-body.dark { background:#000; }
+body.dark {
+  background:#000;
+}
+.fade-in {
+  opacity:0; animation:fadeIn 2s ease-in-out forwards;
+}
 .main {
   display:flex; flex-direction:column; height:100dvh;
-  opacity:0; animation:fadeIn 1.5s ease forwards;
 }
 .header-message {
   height:var(--header-height);
   display:flex; align-items:center; justify-content:center;
-  padding:0 2vw;
-}
-.header-gradient {
-  font-weight:800;
   font-size:clamp(1.3rem,2.5vw,2rem);
   background:linear-gradient(to right,#ff8a00,#e52e71,#9b00ff,#00c6ff);
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
+  font-weight:800;
   white-space:nowrap;
+  text-align:center;
+  padding:1vh 4vw;
 }
 .grid {
   flex:1;
@@ -46,39 +50,35 @@ body.dark { background:#000; }
 @media (orientation: landscape) {
   .grid { grid-template-columns: repeat(4, 1fr); grid-template-rows: 1fr; }
 }
-
 .block {
   position:relative;
-  display:flex; justify-content:center; align-items:center; text-align:center;
+  display:flex; justify-content:center; align-items:center;
+  text-align:center;
   border-radius:18px;
   font-weight:bold;
   font-size:clamp(1rem,1.9vw,1.3rem);
   color:#fff;
   background-size:200% 200%;
-  background-position:center;
   cursor:pointer;
   transition:.5s;
   overflow:hidden;
   transform:scale(.95);
   opacity:0;
-  animation:scaleFadeIn 1.6s forwards;
+  animation:scaleFadeIn 1.2s forwards;
+  animation-delay: .3s;
   padding:6px;
 }
 .block-content {
-  position:absolute;
-  inset:0;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+  position:absolute; inset:0;
+  display:flex; justify-content:center; align-items:center;
   padding:6px;
-  text-align:center;
 }
 .label { z-index:1; }
 .accionable {
-  color:#fff;
   font-family:'Poppins',sans-serif;
-  font-size:clamp(.9rem,1.4vw,1.2rem);
+  font-size:clamp(.9rem,1.4vw,1.1rem);
   font-weight:600;
+  color:#fff;
   padding:10px;
   border-radius:14px;
   opacity:0;
@@ -98,16 +98,12 @@ body.dark { background:#000; }
   object-fit:contain;
   border-radius:20px;
   box-shadow:0 10px 24px rgba(0,0,0,.4);
-  transition:transform .5s;
-}
-.portada-wrapper img:hover {
-  transform:scale(1.03) rotateY(4deg) rotateX(2deg);
 }
 .footer {
   height:var(--footer-height);
   display:flex; flex-direction:column;
   align-items:center; justify-content:flex-start;
-  padding:3vh 2vw 2vh;
+  padding:2vh 2vw;
 }
 .shock {
   background:linear-gradient(135deg,#ff0080,#ff8c00,#00f2fe);
@@ -116,22 +112,19 @@ body.dark { background:#000; }
   border:none;
   border-radius:28px;
   padding:10px 20px;
-  margin-top:6px;
+  margin-top:10px;
   font-size:clamp(.9rem,1.8vw,1.2rem);
   cursor:pointer;
   box-shadow:0 0 12px rgba(255,105,180,.5);
   animation:pulse 2s infinite;
-  max-width:95%;
 }
 .counter {
   font-size:clamp(.9rem,1.2vw,1.1rem);
   color:#fff;
-  margin-top:4px;
+  margin-top:6px;
   font-family:'Poppins',sans-serif;
   text-align:center;
   white-space:nowrap;
-  opacity:0;
-  animation:fadeInInstant .3s forwards;
 }
 .resaltado {
   font-size:1.1em;
@@ -139,30 +132,29 @@ body.dark { background:#000; }
   font-weight:700;
 }
 .trigguiletras {
-  height:20px;
+  height:22px;
   opacity:.9;
   margin-top:1.5vh;
 }
-.hidden { display:none!important; }
 .frase-magica {
   font-size:1rem;
   color:#ffeb3b;
   text-align:center;
   margin-top:1rem;
   font-family:'Poppins',sans-serif;
-  animation:fadeIn 1.4s ease;
 }
-@keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
-@keyframes fadeInInstant{to{opacity:1}}
+.hidden { display:none!important; }
+
+@keyframes fadeIn{from{opacity:0}to{opacity:1}}
 @keyframes scaleFadeIn{to{transform:scale(1);opacity:1}}
 @keyframes aparecer{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
 @keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.06)}}
-@keyframes glow{0%{background:radial-gradient(circle,#ffffff05,#0000)}50%{background:radial-gradient(circle,#ffffff15,#0000)}100%{background:radial-gradient(circle,#ffffff05,#0000)}}
+@keyframes glow{0%,100%{background:radial-gradient(circle,#ffffff05,#0000)}50%{background:radial-gradient(circle,#ffffff15,#0000)}}
 </style>
 </head>
-<body>
+<body class="fade-in">
 <div class="main">
-  <div class="header-message"><div class="header-gradient">¿Dónde está el libro? 📚</div></div>
+  <div class="header-message">¿Dónde está el libro? 📚</div>
   <div class="grid" id="gridContainer"></div>
   <div class="footer">
     <div class="frase-magica hidden" id="fraseMagica">✨ Este libro te eligió a ti. No es coincidencia.</div>
