--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
     html,body {
       width:100%; height:100%;
       font-family:'Archivo',sans-serif;
-      background:radial-gradient(circle at 30% 30%, #0f0c29, #302b63, #24243e);
+      background: radial-gradient(circle at 20% 30%, #240b36, #10002b, #000000);
       overflow:hidden;
     }
     body.dark {
-      background: radial-gradient(circle, #000000 0%, #1c1c1c 100%);
+      background: radial-gradient(circle at 50% 50%, #000000 0%, #0f0f0f 100%);
     }
     .main {
       display:flex; flex-direction:column; height:100dvh;
@@ -31,17 +31,17 @@
     }
     .header-gradient {
       font-weight:900;
-      font-size:clamp(1.3rem,2.5vw,2rem);
-      background:linear-gradient(to right,#ff00f7,#00ffe7,#ffe600,#ff006e,#00c3ff);
+      font-size:clamp(1.3rem,2.6vw,2.1rem);
+      background:linear-gradient(45deg,#ff00cc,#ffea00,#00ffcc,#ff0066);
+      background-size:400% 400%;
       -webkit-background-clip:text;
       -webkit-text-fill-color:transparent;
-      background-size:300% 300%;
-      animation:glowtext 8s linear infinite;
+      animation:glowtext 6s ease infinite;
     }
     .grid {
       flex:1;
       display:grid;
-      gap:1.5vw;
+      gap:1.6vw;
       padding:0 2vw;
       grid-template-columns:1fr 1fr;
       grid-template-rows:1fr 1fr;
@@ -51,26 +51,25 @@
     }
     .block {
       position:relative;
-      display:flex; justify-content:center; align-items:center;
-      text-align:center;
+      display:flex; justify-content:center; align-items:center; text-align:center;
       border-radius:20px;
       font-weight:bold;
-      font-size:clamp(1rem,2vw,1.4rem);
+      font-size:clamp(1rem,2.1vw,1.5rem);
       color:#ffffff;
       background-size:250% 250%;
       background-position:center;
       cursor:pointer;
-      transition:transform .5s ease;
+      transition:.5s;
       overflow:hidden;
       transform:scale(.94);
       opacity:0;
-      animation:scaleFadeIn 1.2s forwards;
-      padding:10px;
-      box-shadow:0 0 32px rgba(255,255,255,0.08);
+      animation:scaleFadeIn 1.1s forwards;
+      padding:12px;
+      box-shadow:0 0 45px rgba(255,255,255,0.1);
     }
     .block:hover {
-      transform:scale(1.02);
-      box-shadow:0 0 50px rgba(255,255,255,0.2);
+      transform:scale(1.03);
+      box-shadow:0 0 60px rgba(255,255,255,0.2);
     }
     .block-content {
       position:absolute;
@@ -84,20 +83,20 @@
     .label {
       z-index:2;
       font-weight:900;
-      text-shadow: 0 0 10px rgba(0,0,0,0.6);
+      text-shadow: 0 0 14px rgba(0,0,0,0.7);
     }
     .accionable {
       font-family:'Poppins',sans-serif;
-      font-size:clamp(.9rem,1.4vw,1.2rem);
+      font-size:clamp(1rem,1.5vw,1.3rem);
       font-weight:600;
-      padding:10px 16px;
-      border-radius:18px;
+      padding:12px 18px;
+      border-radius:20px;
       opacity:0;
-      animation:aparecer .7s forwards;
+      animation:aparecer .8s forwards;
       text-align:center;
-      box-shadow:0 10px 35px rgba(0,0,0,0.5);
-      background:rgba(0,0,0,0.4);
-      backdrop-filter: blur(8px);
+      box-shadow:0 14px 45px rgba(0,0,0,0.5);
+      background:rgba(0,0,0,0.5);
+      backdrop-filter: blur(10px);
       z-index:3;
     }
     .portada-wrapper {
@@ -107,15 +106,15 @@
       animation:glow 6s ease-in-out infinite;
     }
     .portada-wrapper img {
-      width:80%;
+      width:82%;
       max-height:90%;
       object-fit:contain;
-      border-radius:20px;
-      box-shadow:0 20px 35px rgba(0,0,0,.6);
+      border-radius:22px;
+      box-shadow:0 20px 40px rgba(0,0,0,.6);
       transition:transform .6s ease;
     }
     .portada-wrapper img:hover {
-      transform:scale(1.05) rotateY(6deg) rotateX(3deg);
+      transform:scale(1.07) rotateY(5deg) rotateX(3deg);
     }
     .footer {
       height:var(--footer-height);
@@ -124,20 +123,20 @@
       padding:2.5vh 2vw 2vh;
     }
     .shock {
-      background:linear-gradient(135deg,#ff00cc,#ff9900,#00f2fe);
+      background:linear-gradient(135deg,#ff00cc,#00fff0,#ffea00,#ff4b2b);
       color:#fff;
       font-weight:bold;
       border:none;
-      border-radius:30px;
-      padding:12px 26px;
-      margin-top:8px;
-      font-size:clamp(1rem,2vw,1.3rem);
+      border-radius:36px;
+      padding:14px 30px;
+      margin-top:10px;
+      font-size:clamp(1.1rem,2vw,1.4rem);
       cursor:pointer;
-      box-shadow:0 0 30px rgba(255,255,255,.3);
-      animation:pulse 2s infinite;
+      box-shadow:0 0 36px rgba(255,255,255,.35);
+      animation:pulse 2.2s infinite;
     }
     .counter {
-      font-size:clamp(1rem,1.3vw,1.1rem);
+      font-size:clamp(1rem,1.4vw,1.2rem);
       color:#fff;
       margin-top:6px;
       font-family:'Poppins',sans-serif;
@@ -148,8 +147,8 @@
     }
     .resaltado {
       font-size:1.2em;
-      color:#00f7ff;
-      font-weight:800;
+      color:#ffea00;
+      font-weight:900;
     }
     .trigguiletras {
       height:22px;
@@ -159,7 +158,7 @@
     .hidden { display:none!important; }
     .frase-magica {
       font-size:1rem;
-      color:#ffe600;
+      color:#fff500;
       text-align:center;
       margin-top:1rem;
       font-family:'Poppins',sans-serif;
@@ -171,8 +170,8 @@
     @keyframes scaleFadeIn{to{transform:scale(1);opacity:1}}
     @keyframes aparecer{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
     @keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.08)}}
-    @keyframes glow{0%{background:radial-gradient(circle,#ffffff05,#0000)}50%{background:radial-gradient(circle,#ffffff20,#0000)}100%{background:radial-gradient(circle,#ffffff05,#0000)}}
-    @keyframes glowtext { 
+    @keyframes glow{0%{background:radial-gradient(circle,#ffffff05,#0000)}50%{background:radial-gradient(circle,#ffffff25,#0000)}100%{background:radial-gradient(circle,#ffffff05,#0000)}}
+    @keyframes glowtext {
       0% {background-position: 0% 50%;}
       50% {background-position: 100% 50%;}
       100% {background-position: 0% 50%;}
@@ -193,7 +192,7 @@
   <script>
     const $ = id => document.getElementById(id);
     let libroActual, bloquePortada, revelado = false;
-    const emojis = ["🌊","🛡️","🧠","📈","📘","🔮","❤️","✨","🪞"];
+    const emojis = ["🌈","🔥","⚡","🌀","🌟","💥","🧠","🛡️"];
 
     fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
       .then(res => res.json())
@@ -208,8 +207,8 @@
       const h = parseInt(color.slice(1,3),16),
             l = parseInt(color.slice(3,5),16),
             s = parseInt(color.slice(5,7),16);
-      const bright = `rgba(${Math.min(h+60,255)},${Math.min(l+60,255)},${Math.min(s+60,255)},0.9)`;
-      return `linear-gradient(145deg, ${color}, ${bright})`;
+      const bright = `rgba(${Math.min(h+70,255)},${Math.min(l+70,255)},${Math.min(s+70,255)},0.95)`;
+      return `linear-gradient(150deg, ${color}, ${bright})`;
     }
 
     function iniciarUI(libro) {
