--- a/public/index.html
+++ b/public/index.html
@@ -10,274 +10,276 @@
       --header-height: 60px;
       --footer-height: 120px;
     }
-    * { margin:0; padding:0; box-sizing:border-box; }
-    html,body {
-      width:100%; height:100%;
-      font-family:'Archivo',sans-serif;
-      background: radial-gradient(circle at 20% 30%, #240b36, #10002b, #000000);
-      overflow:hidden;
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body {
+      width: 100%;
+      height: 100%;
+      font-family: 'Archivo', sans-serif;
+      background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
+      overflow: hidden;
     }
-    body.dark {
-      background: radial-gradient(circle at 50% 50%, #000000 0%, #0f0f0f 100%);
-    }
+    body.dark { background: #000; }
     .main {
-      display:flex; flex-direction:column; height:100dvh;
-      opacity:0; animation:fadeIn 1.5s ease forwards;
+      display: flex;
+      flex-direction: column;
+      height: 100dvh;
+      opacity: 0;
+      animation: fadeIn 1.5s ease forwards;
     }
     .header-message {
-      height:var(--header-height);
-      display:flex; align-items:center; justify-content:center;
-      padding:0 2vw;
+      height: var(--header-height);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0 2vw;
     }
     .header-gradient {
-      font-weight:900;
-      font-size:clamp(1.3rem,2.6vw,2.1rem);
-      background:linear-gradient(45deg,#ff00cc,#ffea00,#00ffcc,#ff0066);
-      background-size:400% 400%;
-      -webkit-background-clip:text;
-      -webkit-text-fill-color:transparent;
-      animation:glowtext 6s ease infinite;
+      font-weight: 800;
+      font-size: clamp(1.3rem, 2.5vw, 2rem);
+      background: linear-gradient(to right, #ff00cc, #00ffff, #ffea00);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      white-space: nowrap;
     }
     .grid {
-      flex:1;
-      display:grid;
-      gap:1.6vw;
-      padding:0 2vw;
-      grid-template-columns:1fr 1fr;
-      grid-template-rows:1fr 1fr;
+      flex: 1;
+      display: grid;
+      gap: 1.5vw;
+      padding: 0 2vw;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
     }
     @media (orientation: landscape) {
-      .grid { grid-template-columns: repeat(4, 1fr); grid-template-rows: 1fr; }
+      .grid {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr;
+      }
     }
     .block {
-      position:relative;
-      display:flex; justify-content:center; align-items:center; text-align:center;
-      border-radius:20px;
-      font-weight:bold;
-      font-size:clamp(1rem,2.1vw,1.5rem);
-      color:#ffffff;
-      background-size:250% 250%;
-      background-position:center;
-      cursor:pointer;
-      transition:.5s;
-      overflow:hidden;
-      transform:scale(.94);
-      opacity:0;
-      animation:scaleFadeIn 1.1s forwards;
-      padding:12px;
-      box-shadow:0 0 45px rgba(255,255,255,0.1);
-    }
-    .block:hover {
-      transform:scale(1.03);
-      box-shadow:0 0 60px rgba(255,255,255,0.2);
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      border-radius: 18px;
+      font-weight: bold;
+      font-size: clamp(1rem, 1.9vw, 1.3rem);
+      color: #fff;
+      background-size: 300% 300%;
+      background-position: center;
+      cursor: pointer;
+      transition: .5s;
+      overflow: hidden;
+      transform: scale(0.95);
+      opacity: 0;
+      animation: scaleFadeIn 1.6s forwards;
+      padding: 6px;
     }
     .block-content {
-      position:absolute;
-      inset:0;
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      padding:10px;
-      text-align:center;
+      position: absolute;
+      inset: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 6px;
+      text-align: center;
     }
-    .label {
-      z-index:2;
-      font-weight:900;
-      text-shadow: 0 0 14px rgba(0,0,0,0.7);
-    }
+    .label { z-index: 1; }
     .accionable {
-      font-family:'Poppins',sans-serif;
-      font-size:clamp(1rem,1.5vw,1.3rem);
-      font-weight:600;
-      padding:12px 18px;
-      border-radius:20px;
-      opacity:0;
-      animation:aparecer .8s forwards;
-      text-align:center;
-      box-shadow:0 14px 45px rgba(0,0,0,0.5);
-      background:rgba(0,0,0,0.5);
-      backdrop-filter: blur(10px);
-      z-index:3;
+      color: #fff;
+      font-family: 'Poppins', sans-serif;
+      font-size: clamp(0.9rem, 1.4vw, 1.2rem);
+      font-weight: 600;
+      padding: 10px;
+      border-radius: 14px;
+      opacity: 0;
+      animation: aparecer .6s forwards;
+      text-align: center;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
     }
     .portada-wrapper {
-      width:100%; height:100%;
-      display:flex; justify-content:center; align-items:center;
-      background:radial-gradient(circle,#ffffff10,#0000);
-      animation:glow 6s ease-in-out infinite;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: radial-gradient(circle, #ffffff10, #0000);
+      animation: glow 6s ease-in-out infinite;
     }
     .portada-wrapper img {
-      width:82%;
-      max-height:90%;
-      object-fit:contain;
-      border-radius:22px;
-      box-shadow:0 20px 40px rgba(0,0,0,.6);
-      transition:transform .6s ease;
+      width: 80%;
+      max-height: 90%;
+      object-fit: contain;
+      border-radius: 20px;
+      box-shadow: 0 10px 24px rgba(0, 0, 0, 0.4);
+      transition: transform .5s;
     }
     .portada-wrapper img:hover {
-      transform:scale(1.07) rotateY(5deg) rotateX(3deg);
+      transform: scale(1.03) rotateY(4deg) rotateX(2deg);
     }
     .footer {
-      height:var(--footer-height);
-      display:flex; flex-direction:column;
-      align-items:center; justify-content:flex-start;
-      padding:2.5vh 2vw 2vh;
+      height: var(--footer-height);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      padding: 3vh 2vw 2vh;
     }
     .shock {
-      background:linear-gradient(135deg,#ff00cc,#00fff0,#ffea00,#ff4b2b);
-      color:#fff;
-      font-weight:bold;
-      border:none;
-      border-radius:36px;
-      padding:14px 30px;
-      margin-top:10px;
-      font-size:clamp(1.1rem,2vw,1.4rem);
-      cursor:pointer;
-      box-shadow:0 0 36px rgba(255,255,255,.35);
-      animation:pulse 2.2s infinite;
+      background: linear-gradient(135deg, #00f0ff, #ff00cc, #ffe600);
+      color: #000;
+      font-weight: bold;
+      border: none;
+      border-radius: 999px;
+      padding: 12px 26px;
+      margin-top: 10px;
+      font-size: clamp(0.9rem, 1.8vw, 1.2rem);
+      cursor: pointer;
+      box-shadow: 0 0 18px rgba(255, 255, 255, 0.5);
+      animation: pulse 2s infinite;
+      max-width: 95%;
+      transition: all 0.3s ease;
+    }
+    .shock:hover {
+      transform: scale(1.06);
     }
     .counter {
-      font-size:clamp(1rem,1.4vw,1.2rem);
-      color:#fff;
-      margin-top:6px;
-      font-family:'Poppins',sans-serif;
-      text-align:center;
-      white-space:nowrap;
-      opacity:0;
-      animation:fadeInInstant .4s forwards;
+      font-size: clamp(0.9rem, 1.2vw, 1.1rem);
+      color: #fff;
+      margin-top: 4px;
+      font-family: 'Poppins', sans-serif;
+      text-align: center;
+      white-space: nowrap;
+      opacity: 0;
+      animation: fadeInInstant .3s forwards;
     }
     .resaltado {
-      font-size:1.2em;
-      color:#ffea00;
-      font-weight:900;
+      font-size: 1.1em;
+      color: #ffcc00;
+      font-weight: 700;
     }
     .trigguiletras {
-      height:22px;
-      opacity:.95;
-      margin-top:1.5vh;
+      height: 20px;
+      opacity: 0.9;
+      margin-top: 1.5vh;
     }
-    .hidden { display:none!important; }
+    .hidden { display: none !important; }
     .frase-magica {
-      font-size:1rem;
-      color:#fff500;
-      text-align:center;
-      margin-top:1rem;
-      font-family:'Poppins',sans-serif;
-      animation:fadeIn 1.4s ease;
+      font-size: 1rem;
+      color: #ffeb3b;
+      text-align: center;
+      margin-top: 1rem;
+      font-family: 'Poppins', sans-serif;
+      animation: fadeIn 1.4s ease;
     }
-
-    @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
-    @keyframes fadeInInstant{to{opacity:1}}
-    @keyframes scaleFadeIn{to{transform:scale(1);opacity:1}}
-    @keyframes aparecer{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
-    @keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.08)}}
-    @keyframes glow{0%{background:radial-gradient(circle,#ffffff05,#0000)}50%{background:radial-gradient(circle,#ffffff25,#0000)}100%{background:radial-gradient(circle,#ffffff05,#0000)}}
-    @keyframes glowtext {
-      0% {background-position: 0% 50%;}
-      50% {background-position: 100% 50%;}
-      100% {background-position: 0% 50%;}
-    }
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+    @keyframes fadeInInstant { to { opacity: 1; } }
+    @keyframes scaleFadeIn { to { transform: scale(1); opacity: 1; } }
+    @keyframes aparecer { from { opacity: 0; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
+    @keyframes pulse { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.06); } }
+    @keyframes glow { 0% { background: radial-gradient(circle, #ffffff05, #0000); } 50% { background: radial-gradient(circle, #ffffff15, #0000); } 100% { background: radial-gradient(circle, #ffffff05, #0000); } }
   </style>
 </head>
 <body>
-  <div class="main">
-    <div class="header-message"><div class="header-gradient">¿Dónde está el libro? 📚</div></div>
-    <div class="grid" id="gridContainer"></div>
-    <div class="footer">
-      <div class="frase-magica hidden" id="fraseMagica">✨ Este libro te eligió a ti. No es coincidencia.</div>
-      <button class="shock hidden" id="shockBtn">📖 ¡Chócalas si abriste un libro físico!</button>
-      <div class="counter hidden" id="contador">✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨</div>
-      <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
-    </div>
+<div class="main">
+  <div class="header-message"><div class="header-gradient">¿Dónde está el libro? 📚</div></div>
+  <div class="grid" id="gridContainer"></div>
+  <div class="footer">
+    <div class="frase-magica hidden" id="fraseMagica">✨ Este libro te eligió a ti. No es coincidencia.</div>
+    <button class="shock hidden" id="shockBtn">📖 ¡Chócalas!</button>
+    <div class="counter hidden" id="contador">✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨</div>
+    <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui" />
   </div>
-  <script>
-    const $ = id => document.getElementById(id);
-    let libroActual, bloquePortada, revelado = false;
-    const emojis = ["🌈","🔥","⚡","🌀","🌟","💥","🧠","🛡️"];
+</div>
+<script>
+  const $ = id => document.getElementById(id);
+  let libroActual, bloquePortada, revelado = false;
+  const emojis = ["🌊","🛡️","🧠","📈","📘","🔮","❤️","✨","🪞"];
 
-    fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
-      .then(res => res.json())
-      .then(data => {
-        const libro = data.libros[Math.floor(Math.random()*data.libros.length)];
-        libroActual = libro;
-        bloquePortada = Math.floor(Math.random()*4);
-        iniciarUI(libro);
-      });
+  fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
+    .then(res => res.json())
+    .then(data => {
+      const libro = data.libros[Math.floor(Math.random() * data.libros.length)];
+      libroActual = libro;
+      bloquePortada = Math.floor(Math.random() * 4);
+      iniciarUI(libro);
+    });
 
-    function generarGradiente(color) {
-      const h = parseInt(color.slice(1,3),16),
-            l = parseInt(color.slice(3,5),16),
-            s = parseInt(color.slice(5,7),16);
-      const bright = `rgba(${Math.min(h+70,255)},${Math.min(l+70,255)},${Math.min(s+70,255)},0.95)`;
-      return `linear-gradient(150deg, ${color}, ${bright})`;
+  function generarGradiente(color) {
+    const h = parseInt(color.slice(1, 3), 16),
+          l = parseInt(color.slice(3, 5), 16),
+          s = parseInt(color.slice(5, 7), 16);
+    const light = `rgba(${Math.min(h + 40, 255)},${Math.min(l + 40, 255)},${Math.min(s + 40, 255)},0.8)`;
+    return `linear-gradient(135deg, ${color}, ${light})`;
+  }
+
+  function iniciarUI(libro) {
+    const grid = $("gridContainer");
+    $("logoTriggui").classList.remove("hidden");
+    grid.innerHTML = "";
+    libro.palabras.forEach((palabra, i) => {
+      const div = document.createElement("div");
+      div.className = "block";
+      div.id = `bloque${i}`;
+      div.style.background = generarGradiente(libro.colores[i] || "#555");
+      const emoji = emojis[i % emojis.length];
+      div.innerHTML = `
+        <div class="block-content label">${emoji} ${palabra}</div>
+        <div class="block-content accionable hidden" id="bloque${i}Text">${libro.frases[i]}</div>`;
+      div.onclick = () => manejarClick(i);
+      grid.appendChild(div);
+    });
+  }
+
+  function manejarClick(i) {
+    if (revelado) return location.reload();
+    if (i === bloquePortada) revelarTodo();
+    else {
+      $(`bloque${i}Text`).classList.remove("hidden");
+      $(`bloque${i}`).querySelector(".label").classList.add("hidden");
     }
+  }
 
-    function iniciarUI(libro) {
-      const grid = $("gridContainer");
-      $("logoTriggui").classList.remove("hidden");
-      grid.innerHTML = "";
-      libro.palabras.forEach((palabra, i) => {
-        const div = document.createElement("div");
-        div.className = "block";
-        div.id = `bloque${i}`;
-        div.style.background = generarGradiente(libro.colores[i] || "#555");
-        const emoji = emojis[i % emojis.length];
-        div.innerHTML = `
-          <div class="block-content label">${emoji} ${palabra}</div>
-          <div class="block-content accionable hidden" id="bloque${i}Text">${libro.frases[i]}</div>`;
-        div.onclick = () => manejarClick(i);
-        grid.appendChild(div);
-      });
-    }
-
-    function manejarClick(i) {
-      if (revelado) return location.reload();
-      if (i === bloquePortada) revelarTodo();
-      else {
+  function revelarTodo() {
+    libroActual.palabras.forEach((_, i) => {
+      const block = $(`bloque${i}`);
+      if (i === bloquePortada) {
+        block.innerHTML = "";
+        const wrapper = document.createElement("div");
+        wrapper.className = "portada-wrapper";
+        const img = document.createElement("img");
+        img.src = libroActual.portada;
+        img.alt = "Portada";
+        wrapper.appendChild(img);
+        block.appendChild(wrapper);
+        block.style.background = "none";
+      } else {
         $(`bloque${i}Text`).classList.remove("hidden");
-        $(`bloque${i}`).querySelector(".label").classList.add("hidden");
+        block.querySelector(".label").classList.add("hidden");
       }
-    }
+    });
+    document.body.classList.add("dark");
+    document.body.style.background = libroActual.fondo;
+    $("logoTriggui").classList.add("hidden");
+    $("fraseMagica").classList.remove("hidden");
+    setTimeout(() => {
+      $("fraseMagica").classList.add("hidden");
+      $("shockBtn").classList.remove("hidden");
+    }, 2500);
+    revelado = true;
+  }
 
-    function revelarTodo() {
-      libroActual.palabras.forEach((_, i) => {
-        const block = $(`bloque${i}`);
-        if (i === bloquePortada) {
-          block.innerHTML = "";
-          const wrapper = document.createElement("div");
-          wrapper.className = "portada-wrapper";
-          const img = document.createElement("img");
-          img.src = libroActual.portada;
-          img.alt = "Portada";
-          wrapper.appendChild(img);
-          block.appendChild(wrapper);
-          block.style.background = "none";
-        } else {
-          $(`bloque${i}Text`).classList.remove("hidden");
-          block.querySelector(".label").classList.add("hidden");
-        }
-      });
-      document.body.classList.add("dark");
-      document.body.style.background = libroActual.fondo;
-      $("logoTriggui").classList.add("hidden");
-      $("fraseMagica").classList.remove("hidden");
-      setTimeout(() => {
-        $("fraseMagica").classList.add("hidden");
-        $("shockBtn").classList.remove("hidden");
-      }, 2500);
-      revelado = true;
+  $("shockBtn").onclick = async () => {
+    $("shockBtn").classList.add("hidden");
+    $("contador").classList.remove("hidden");
+    try {
+      const res = await fetch("https://triggui-api.vercel.app/api/increment");
+      const data = await res.json();
+      $("contador").innerHTML = `✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString('es-MX')}</span> libros físicos ✨`;
+    } catch {
+      $("contador").innerText = "📚 ¡Error al contar libros!";
     }
-
-    $("shockBtn").onclick = async () => {
-      $("shockBtn").classList.add("hidden");
-      $("contador").classList.remove("hidden");
-      try {
-        const res = await fetch("https://triggui-api.vercel.app/api/increment");
-        const data = await res.json();
-        $("contador").innerHTML = `✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString('es-MX')}</span> libros físicos ✨`;
-      } catch {
-        $("contador").innerText = "📚 ¡Error al contar libros!";
-      }
-    };
-  </script>
+  };
+</script>
 </body>
 </html>
